# rareskills-rust

./: .gitignore  Questions.md  README.md
week-1/: solutions.md
week-1/src/: main.rs
week-2/: solutions.md
week-2/calculator/: Cargo.toml
week-2/calculator/src/: calculator.rs  main.rs
week-2/src/: main.rs
week-2/vulnerable-NEAR-contract/src/: lib.rs
week-3/: slashing_handler_audit_report.md  solutions.md
week-3/vulnerable-HTTP-server/: Cargo.toml  deep.json  less_deep.json  nested.json  recursive_map.json
week-3/vulnerable-HTTP-server/src/: json-generator.py  main.rs  math_poc.rs  panic_handler_poc.rs  poc.rs  storage_panic_poc.rs
week-3/vulnerable-NFT-soroban/: Cargo.toml  audit-report.md
week-3/vulnerable-NFT-soroban/src/: admin.rs  approval.rs  balance.rs  contract.rs  owner.rs  test.rs
