[package]
name = "vulnerable-http-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vulnerable-http-server"
path = "src/main.rs"

[[bin]]
name = "math_poc"
path = "src/math_poc.rs"

[[bin]]
name = "storage-panic"
path = "src/storage_panic_poc.rs"

[dependencies]
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
hyper = "0.14"
tower = "0.4"
reqwest = { version = "0.11", features = ["json"] }
